增加参考文献

--- a/恶意软件分类/恶意软件分类.md
+++ b/恶意软件分类/恶意软件分类.md
@@ -16,7 +16,7 @@
 	* cross­validation 应对overfitting 
 
 #### 特征
-* 在kaggle的malware-classification竞赛中微软提供了压缩后还有35G的海量数据，可以在kernel中使用。注意数据不知道是因为太大还是什么原因，最近一旦选择加载了对应的dataset，kernel就会卡死……所以导不出具体分类效果了。
+* 在kaggle的malware-classification竞赛中微软提供了压缩后还有35G的海量数据，可以在kernel中使用。注意数据不知道是因为太大还是什么原因，最近一旦选择加载了对应的dataset，kernel就会卡死……所以导不出具体分类效果了。（此处踩坑！跟科学上网没有关系！！不要在此浪费时间了。自己上传的dataset就不会出现kernel卡死的问题）
 * 自己尝试提取了.asm文件的纹理特征和opcode-4gram，代码如下，使用时需注意路径是否正确：
 	* 二进制文件生成图像的纹理：
 
@@ -131,7 +131,9 @@ df.to_csv("op_4gram_features.csv",index=False)
 ### 问题
 * 一开始的时候心中一直有一个疑问，图片可以用cnn来提取特征、分类很好理解，虽然可解释性很差，不能给出直白的理由说明为什么这个特征会能用、好用。但其它那些特征，比如课上常提到的API序列，是如何作为特征使用的呢？
 	* 这个问题实际上是要根据使用的不同机器学习来决定，如何设计将信息（例如cfg）转化成特征向量。
-* 代码隐藏技术比如加壳 也不会改变太多的特征有哪些？
+	* 特征工程基本可以说是最重要的，尤其是在各种模型都已有写好的、可直接调用的库的情况下。特征工程除了筛选出可用、好用的特征信息，也需要将它们变成模型能用的数据形式。
+* 代码隐藏技术比如加壳，也不会改变太多的特征有哪些？
+* 论文中时常出现关于时间、空间的描述，还不太理解选择特征时如何将它们考虑在内。比如“时间序列”，比如“函数之间的调用命令和跳转命令都是可以重新排列的，因此函数之间存在复杂的空间相关性”。
 
 ## 参考文献
 1. [malware-classification比赛冠军组的github](https://github.com/daxiongshu/kaggle_Microsoft_Malware)
@@ -139,4 +141,7 @@ df.to_csv("op_4gram_features.csv",index=False)
 3. [论文：A scalable multi-level feature extraction technique to detect malicious executables](https://link.springer.com/article/10.1007/s10796-007-9054-3)
 4. [论文：Detecting unknown malicious code by applying
 classification techniques on OpCode patterns](https://security-informatics.springeropen.com/track/pdf/10.1186/2190-8532-1-1)
- 
+5. [基于API序列特征和统计特征组合的恶意样本检测框架](http://www.cnki.com.cn/Article/CJFDTotal-QHXB201805011.htm)
+6. [深度学习在恶意软件检测中的应用](https://xz.aliyun.com/t/2447)
+7. [一种PE文件特征提取方法研究与实现](http://wap.cnki.net/huiyi-TTTT201409001061.html) 这篇关于时序特性（结合ngrams），还没看
+8. [Detecting unknown malicious code by applying classification techniques on OpCode patterns](https://security-informatics.springeropen.com/track/pdf/10.1186/2190-8532-1-1)
