增加参考文献

--- a/恶意软件分类/恶意软件分类.md
+++ b/恶意软件分类/恶意软件分类.md
@@ -126,7 +126,12 @@ for sid,op_ngram in map_4gram.iteritems():
 df = pd.DataFrame(dateframelist)
 df.to_csv("op_4gram_features.csv",index=False)
 ```
-* randomforest可以用多个机器学习库实现，直接调用即可。尝试第一个纹理的用cnn，然后把两个分类器的结果综合起来（boost？）
+* randomforest可以用多个机器学习库实现，直接调用即可。
+* 比如sklearn：
+
+![](img/0.png)
+
+* 尝试第一个纹理的用cnn，然后把两个分类器的结果综合起来（boost？）
 
 ### 问题
 * 一开始的时候心中一直有一个疑问，图片可以用cnn来提取特征、分类很好理解，虽然可解释性很差，不能给出直白的理由说明为什么这个特征会能用、好用。但其它那些特征，比如课上常提到的API序列，是如何作为特征使用的呢？
